# CASE-Final

./: README.md
Examples/HAMR_Examples/tool-assessment-4/: readme.md
Examples/HAMR_Examples/tool-assessment-4/basic/test_data_port_periodic_domains/: readme.md
Examples/HAMR_Examples/tool-assessment-4/basic/test_event_data_port_periodic_domains/: readme.md
Examples/HAMR_Examples/tool-assessment-4/basic/test_event_port_periodic_domains/: readme.md
Examples/HAMR_Examples/tool-assessment-4/basic/tutorial/: readme.md
Examples/HAMR_Examples/tool-assessment-4/bit-codec/producer-filter-consumer/: readme.md
Examples/HAMR_Examples/tool-assessment-4/cakeml/attestation-gate/: readme.md
Examples/HAMR_Examples/tool-assessment-4/cakeml/attestation-gate/aadl/: CASE_AttesationGate.aadl
Examples/HAMR_Examples/tool-assessment-4/vm/test_data_port_periodic_domains_VM/receiver_vm/: readme.md
Examples/HAMR_Examples/tool-assessment-4/vm/test_event_data_port_periodic_domains_VM/both_vm/: readme.md
Examples/HAMR_Examples/tool-assessment-4/vm/test_event_data_port_periodic_domains_VM/receiver_vm/: readme.md
Examples/HAMR_Examples/tool-assessment-4/vm/test_event_data_port_periodic_domains_VM/receiver_vm/hamr/camkes/components/VM/: CMakeLists.txt
Examples/HAMR_Examples/tool-assessment-4/vm/test_event_data_port_periodic_domains_VM/receiver_vm/hamr/camkes/components/VM/exynos5422/: devices.camkes
Examples/HAMR_Examples/tool-assessment-4/vm/test_event_data_port_periodic_domains_VM/receiver_vm/hamr/camkes/components/VM/qemu-arm-virt/: devices.camkes
Examples/HAMR_Examples/tool-assessment-4/vm/test_event_data_port_periodic_domains_VM/sender_vm/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/: README.md
Examples/HAMR_Examples/tool-evaluation-4/simple_uav/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/simple_uav/aadl/.slang/: UAV_UAV_Impl_Instance.json
Examples/HAMR_Examples/tool-evaluation-4/simple_uav/hamr_seL4_Only/camkes/: UAV_Impl_Instance.camkes
Examples/HAMR_Examples/tool-evaluation-4/simple_uav/hamr_seL4_TB/camkes/: UAV_Impl_Instance.camkes
Examples/HAMR_Examples/tool-evaluation-4/test_data_port/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_data_port/aadl/: test_data_port.aadl
Examples/HAMR_Examples/tool-evaluation-4/test_data_port/aadl/.slang/: test_data_port_top_impl_Instance.json
Examples/HAMR_Examples/tool-evaluation-4/test_data_port/hamr_seL4_Only/camkes/: CMakeLists.txt  graph.dot  graph_simple.dot  top_impl_Instance.camkes
Examples/HAMR_Examples/tool-evaluation-4/test_data_port/hamr_seL4_TB/camkes/: CMakeLists.txt  (+3 more)
Examples/HAMR_Examples/tool-evaluation-4/test_data_port_periodic/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_data_port_periodic/aadl/: test_data_port_periodic.aadl
Examples/HAMR_Examples/tool-evaluation-4/test_data_port_periodic_domains/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_data_port_periodic_domains_VM/both_vm/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_data_port_periodic_domains_VM/receiver_vm/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_data_port_periodic_domains_VM/sender_vm/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_data_port_periodic_fan_out/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_data_port_periodic_fan_out/aadl/: test_data_port_periodic_fan_out.aadl
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port/aadl/: test_event_data_port.aadl
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port_fan_out/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port_fan_out/aadl/: test_event_data_port_fan_out.aadl
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port_periodic_domains/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port_periodic_domains/.slang/: test_event_data_port_periodic_domains_top_impl_Instance.json
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port_periodic_domains/aadl/: test_event_data_port_periodic_domains.aadl
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port_periodic_domains_VM/both_vm/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port_periodic_domains_VM/receiver_vm/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port_periodic_domains_VM/sender_vm/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_event_data_port_periodic_domains_VM/sender_vm/hamr_seL4/camkes/components/VM/apps/vmsrc_process/: CMakeLists.txt  vmsrc_process.c
Examples/HAMR_Examples/tool-evaluation-4/test_event_port/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_event_port/aadl/: test_event_port.aadl
Examples/HAMR_Examples/tool-evaluation-4/test_event_port_fan_out/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_event_port_fan_out/aadl/: test_event_port_fan_out.aadl
Examples/HAMR_Examples/tool-evaluation-4/test_event_port_periodic_domains/: readme.md
Examples/HAMR_Examples/tool-evaluation-4/test_event_port_periodic_domains/.slang/: test_event_port_periodic_domains_top_impl_Instance.json
Examples/HAMR_Examples/tool-evaluation-4/test_event_port_periodic_domains/aadl/: test_event_port_periodic_domains.aadl
Examples/Model_Transformations/Attestation/Simple_Example/Initial_Model/: .project  Attestation.aadl
Examples/Model_Transformations/Attestation/Simple_Example/Transformed_Model/: .project  Attestation.aadl
Examples/Model_Transformations/Filter/Simple_Example/Initial_Model/: .project  Producer_Consumer.aadl
Examples/Model_Transformations/Filter/Simple_Example/Transformed_Model/: .project  Producer_Consumer.aadl
Examples/Model_Transformations/Monitor/Simple_Example/Initial_Model/: .project  Monitor.aadl
Examples/Model_Transformations/Monitor/Simple_Example/Transformed_Model/: .project  Monitor.aadl
Setup/Full_CASE_Environment/: .gitignore  Vagrantfile  case-setup.sh  readme.md  setup.bat  setup.sh  snapshot.sh
Setup/IDE_Setup/: make_fmide.bat  make_fmide.sh
(+390 files in other folders)
